k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-api
  namespace: default
spec:
  type: ClusterIP  # We will add Ingress later for external access
  selector:
    app: flask-api
  ports:
    - port: 5000        # Service port
      targetPort: 5000  # Container port
