k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: default
spec:
  type: ClusterIP  # Internal-only service
  selector:
    app: postgres
  ports:
    - port: 5432        # Service port
      targetPort: 5432  # Container port
